--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <H1>入門作品集</H1>
     <ol>
   
-        <li><a href="交叉格子改顏色.html">交叉格子改顏色</a><li>
-            <li><a href=".html">帳密登入介面等等</a><li>
+        <li><a href="交叉格子改顏色.html">交叉格子改顏色</a></li>
+            <li><a href=".html">帳密登入介面等等</a></li>
     </ol>
 </body>
 
