--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
         <li><a href="交叉格子改顏色.html">交叉格子改顏色</a></li>
             <li><a href=".html">帳密登入介面等等</a></li>
+         <li><a href="迷宮.html">htmlcss小遊戲-走迷宮</a></li>
     </ol>
 </body>
 
