--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
              <li> <a href="簡易登入介面2.html">簡易登入介面2</a></li>
              </ol>
         </li>
+         <li><a href="團片懸停.html">團片懸停</a></li>
+        <li><a href="收縮選單.html">收縮選單</a></li>
     </ol>
 </body>
 
