--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <ol>
   
         <li><a href="交叉格子改顏色.html">交叉格子改顏色</a></li>
-            <li><a href="form.html">帳密登入介面等等</a></li>
+         <li><a href="form.html">帳密登入介面等等</a></li>
+          <li><a href="hovar動畫.html">小動畫</a></li>
          <li><a href="迷宮.html">htmlcss小遊戲-走迷宮</a></li>
          <li>登入介面
              <ol type="I">
