--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
          <li><a href="團片懸停.html">團片懸停</a></li>
         <li><a href="收縮選單.html">收縮選單</a></li>
         <li><a href="頂部選單.html">頂部選單</a></li>
-        <li><a href="js終極密碼.html"></a>用js簡易製作終極密碼遊戲</li>
-        <li><a href="js終極密碼.html">js終極密碼.html</a></li>
-        <li><a href=".html"></a></li>
-        <li><a href=".html"></a></li>
+        <li><a href="js終極密碼.html">用js簡易製作終極密碼遊戲</a></li>
+        
+<!--         <li><a href=".html">123</a></li> -->
+<!--         <li><a href=".html">123</a></li> -->
+<!--         <li><a href=".html">123</a></li> -->
+<!--         <li><a href=".html">123</a></li> -->
     </ol>
 </body>
 
