--- a/js終極密碼.html
+++ b/js終極密碼.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>猜數字</title>
 </head>
-
+    <style>
+#id{
+    padding:5,10;
+}
+        </style>
 <body>
+    <a href="index.html" id="button"><button>返回目錄</button></a>
     <script src="js終極密碼.js"></script>
 </body>
 
