--- a/js終極密碼.html
+++ b/js終極密碼.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>猜數字</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
-    <style>
-#id{
-    padding:5,10;
-}
-        </style>
+  
 <body>
-    <a href="index.html" id="button"><button>返回目錄</button></a>
+      <button class="btn btn-info fixed-top translate-middle">再試一次</button>
+    <a href="index.html" class="btn btn-secondary fixed-top translate-middle"><button>返回目錄</button></a>
+  
     <script src="js終極密碼.js"></script>
 </body>
 
