--- a/js終極密碼.html
+++ b/js終極密碼.html
@@ -9,8 +9,8 @@
 </head>
   
 <body>
-      <button class="btn btn-info fixed-top translate-middle">再試一次</button>
-    <a href="index.html" class="btn btn-secondary fixed-top translate-middle"><button>返回目錄</button></a>
+  <a href="js終極密碼.html"><button class="btn btn-info fixed-top translate-middle">再試一次</button></a>
+    <a href="index.html"><button class="btn btn-secondary fixed-top translate-middle">返回目錄</button></a>
   
     <script src="js終極密碼.js"></script>
 </body>
