--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <li><a href="頂部選單.html">頂部選單</a></li>
         <li><a href="js終極密碼.html">用js簡易製作終極密碼遊戲</a></li>
         
-<!--         <li><a href=".html">123</a></li> -->
+        <li><a href="js時鐘.html">js時鐘(顯示目前時間)</a></li>
 <!--         <li><a href=".html">123</a></li> -->
 <!--         <li><a href=".html">123</a></li> -->
 <!--         <li><a href=".html">123</a></li> -->
