--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
          <li><a href="團片懸停.html">團片懸停</a></li>
         <li><a href="收縮選單.html">收縮選單</a></li>
         <li><a href="頂部選單.html">頂部選單</a></li>
+         <li>切換系列
+             <ol type="I">
+             <li><a href="切換語言.html">切換語言</a></li>
+             <li> <a href="切換暗底模式.html">切換暗底模式</a></li>
+             <li> <a href="切換字型.html">切換字型</a></li>
+             <li> <a href="切換整合與應用.html">切換整合與應用</a></li>
+               
+             </ol>
+        </li>
         <li><a href="js終極密碼.html">用js簡易製作終極密碼遊戲</a></li>
         
         <li><a href="js時鐘.html">js時鐘(顯示目前時間)</a></li>
