--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="收縮選單.html">收縮選單</a></li>
         <li><a href="頂部選單.html">頂部選單</a></li>
         <li><a href="側邊選單.html">側邊選單</a></li>
+        <li><a href="todolist.html">todolist簡易版 </a></li>
          <li>切換系列
              <ol type="I">
              <li><a href="切換語言.html">切換語言</a></li>
