--- a/raintext.html
+++ b/raintext.html
@@ -37,7 +37,7 @@
         .text {
             position: absolute;
             top: -50px;
-            color: #fff;
+            color: black;
             text-shadow: 0 0 5px #fff, 0 0 15px #fff, 0 0 30px #fff;
             animation: rain 2s linear infinite; /* 調整雨滴掉落的動畫 */
         }
@@ -89,7 +89,7 @@
         }
 
         // 每隔 20 毫秒生成一個新雨滴
-        setInterval(rain, 20);
+        setInterval(rain, 30);
     </script>
 </body>
 
